Fixed required string is shown after break in Factor dynamical selection box if it is required_params

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,3 +43,17 @@ p.notice {
   color: #348017;
   font-weight: bold;
 }
+
+td span {
+  display:none; 
+  padding:0px 3px; 
+  margin-left:8px;
+}
+td:hover span.tooltip {
+  display:inline; 
+  position:absolute; 
+  background:#ffffff; 
+  border:1px solid #cccccc; 
+  color:#6c6c6c;
+}
+
